# appTest

./: README.md
appTest/: CMakeLists.txt
appTest/app/: CMakeLists.txt
appTest/app/app1/: App1.cpp  App1.h  CMakeLists.txt
appTest/app/app2/: App2.cpp  App2.h  CMakeLists.txt
appTest/app/app3/: App3.cpp  App3.h  CMakeLists.txt
appTest/include/: Static.h
appTest/main/: CMakeLists.txt  main.cpp
appTest/public/: CMakeLists.txt
appTest/public/public1/: CMakeLists.txt  Public1.cpp  Public1.h
appTest/public/public2/: CMakeLists.txt  Public2.cpp  Public2.h
